--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -15,16 +15,11 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -e {0}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-        env:
-          NODE_VERSION: '20'
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -45,6 +40,6 @@ jobs:
           git diff --cached --quiet || git commit -m "💡 Automatic update - $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M')"
 
       - name: Push changes
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
