--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: '*/15 * * * *'
+     - cron: '0 0,1 * * *'
 
 permissions:
   contents: write
